@@ -4,16 +4,21 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.StringWriter;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.charset.Charset;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
-import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
-import java.util.Set;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import org.apache.http.client.utils.URLEncodedUtils;
 import org.apache.tika.exception.TikaException;
+import org.apache.tika.language.LanguageIdentifier;
 import org.apache.tika.metadata.Metadata;
 import org.apache.tika.parser.ParseContext;
 import org.apache.tika.parser.Parser;
@@ -26,7 +31,7 @@ import com.findwise.hydra.local.LocalDocument;
 public class TikaUtils {
 
     public static void enrichDocumentWithFileContents(LocalDocument doc,
-            String fieldPrefix, InputStream stream, Parser parser, boolean addMetaData) throws IOException,
+            String fieldPrefix, InputStream stream, Parser parser, boolean addMetaData, boolean addLanguage) throws IOException,
             SAXException, TikaException {
         Metadata metadata = new Metadata();
         ParseContext parseContext = new ParseContext();
@@ -39,10 +44,12 @@ public class TikaUtils {
         if (addMetaData) {
             addMetadataToDocument(doc, fieldPrefix, metadata);
         }
-
+        if(addLanguage) {
+            addLanguageToDocument(doc, fieldPrefix, textData.toString());        	
+        }
     }
 
-    public static void addTextToDocument(LocalDocument doc, String fieldPrefix,
+	public static void addTextToDocument(LocalDocument doc, String fieldPrefix,
             StringWriter textData) {
         doc.putContentField(fieldPrefix + "content", textData.toString());
     }
@@ -58,19 +65,24 @@ public class TikaUtils {
             }
         }
     }
-
-    public static Set<URL> getUrlsFromObject(Object urlsObject) throws MalformedURLException {
+    
+    public static void addLanguageToDocument(LocalDocument doc,
+			String fieldPrefix, String text) {
+		doc.putContentField(fieldPrefix + "language", new LanguageIdentifier(text).getLanguage());
+	}
+    
+    public static List<URL> getUrlsFromObject(Object urlsObject) throws MalformedURLException, URISyntaxException {
         if (urlsObject instanceof String) {
-            return new HashSet<URL>(Arrays.asList(new URL((String) urlsObject)));
+            return Arrays.asList(uriFromString((String) urlsObject).toURL());
         }
         if (urlsObject instanceof Iterable<?>) {
-            Set<URL> urls = new HashSet<URL>();
+            List<URL> urls = new ArrayList<URL>();
             for (Object urlObj : (Iterable<?>) urlsObject) {
                 urls.addAll(getUrlsFromObject(urlObj));
             }
             return urls;
         }
-        return new HashSet<URL>();
+        return new ArrayList<URL>();
     }
 
     public static Map<String, Object> getFieldMatchingPattern(LocalDocument doc,
@@ -94,5 +106,57 @@ public class TikaUtils {
         }
 
         return fieldToUrl;
+    }
+    
+    public static URI uriFromString(String s) throws URISyntaxException {
+    	String scheme = null;
+    	int port = -1;
+    	String userinfo = null;
+    	String host;
+    	String path = "";
+    	String query = null;
+    	String fragment = null;
+    	URLEncodedUtils.parse(s, Charset.defaultCharset());
+    	Matcher m = Pattern.compile("([^:]+)://.*").matcher(s);
+    	if(m.matches()) {
+    		scheme = m.group(1); 
+    	} 
+    	
+    	m = Pattern.compile("[^:]+://([^@]+)@.*").matcher(s);
+    	if(m.matches()) {
+    		userinfo = m.group(1);
+        	m = Pattern.compile("[^:]+://"+userinfo+"@([^:/]+).*").matcher(s);
+    	} else {
+        	m = Pattern.compile("[^:]+://([^:/]+).*").matcher(s);
+    	}
+    	
+    	if(m.matches()) {
+    		host = m.group(1);
+    	} else {
+    		throw new URISyntaxException(s, "No host specified");
+    	}
+    	
+    	
+    	m = Pattern.compile("[^:]+://.*"+host+":([0-9]+).*").matcher(s);
+    	if(m.matches()) {
+    		port = Integer.parseInt(m.group(1));
+    	} 
+    	
+    	m = Pattern.compile("[^:]+://[^/]+(/[^?#]*).*").matcher(s);
+    	if(m.matches()) {
+    		path = m.group(1);
+    	} 
+    	
+    	m = Pattern.compile("[^:]+://[^?]+\\?([^#]*).*").matcher(s);
+    	if(m.matches()) {
+    		query = m.group(1);
+    	} 
+    	
+    	m = Pattern.compile("[^:]+://[^#]+#(.*)").matcher(s);
+    	if(m.matches()) {
+    		fragment = m.group(1);
+    	} 
+
+    	return new URI(scheme, userinfo, host, port, path, query, fragment);
     }
 }
